# backend-ohjelmointi-2026-kevat

./: .gitignore  README.md  main.py  pyproject.toml
harjoitukset/05-viikko/: main.py
harjoitukset/06-viikko/: README.md  main.py  test_main.py
harjoitukset/07-viikko/: README.md
harjoitukset/07-viikko/app/: main.py
harjoitukset/07-viikko/app/crud/: author_crud.py  book_crud.py
harjoitukset/07-viikko/app/db/: models.py
harjoitukset/07-viikko/app/routers/: author_router.py  book_router.py
harjoitukset/07-viikko/tests/: test_authors.py  test_books.py
harjoitukset/08-viikko/: README.md
harjoitukset/08-viikko/app/: main.py
harjoitukset/08-viikko/app/crud/: author_crud.py  book_crud.py
harjoitukset/08-viikko/app/db/: database.py  models.py
harjoitukset/08-viikko/app/routers/: author_router.py  book_router.py
harjoitukset/08-viikko/tests/: conftest.py  test_authors.py  test_books.py
luennot/05-viikko/: main.py
luennot/06-viikko/: main.py
luennot/07-viikko/app/: main.py
luennot/07-viikko/app/crud/: shoe_crud.py
luennot/07-viikko/app/db/: models.py
luennot/07-viikko/app/routers/: shoe_router.py
luennot/08-viikko/app/: main.py
luennot/08-viikko/app/crud/: manu_crud.py  shoe_crud.py
luennot/08-viikko/app/db/: models.py
luennot/08-viikko/app/routers/: manu_router.py  shoe_router.py
