[project]
name = "Backend-ohjelmointi-kevat-2026"
version = "0.1.0"
description = "opintojakson koodit"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.131.0",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
